Added a toggle to hide chromosome bands
- `ui-cytoband.js` : assigned rects a class
- `admins_genome.html`: added a angular material button to toggle
- `admin_genome.js` control whether to show chromosome bands
-  `ui-cytoband.js` : Small changes in transition of exiting

--- a/src/templates/admins/admins_genome.html
+++ b/src/templates/admins/admins_genome.html
@@ -11,8 +11,12 @@
             {{chromosome}}
           </option>
         </select>
-        
-     <ui-cytoband cytoband-data="cytobandData" responsive="true"></ui-cytoband>
+
+     <ui-cytoband cytoband-data="cytobandData" heatmap-data="heatmapData"responsive="true"></ui-cytoband>
+
+    <md-checkbox ng-model="showBands" ng-change="toggleChromosome()">
+          Show chromosome bands
+    </md-checkbox>
 
     </div>
   </div>
