UI update with beacon search, date picker, chr
- Initialize default dates for date time picker
- Added an autocomplete beacon search chip bar
- Hard coded chromosome keys to ensure order

--- a/src/templates/admins/admins_genome.html
+++ b/src/templates/admins/admins_genome.html
@@ -40,7 +40,7 @@
 
     <div>
       <div style="float:left; padding-left:30px;">
-        <span style="margin-right:5px;"> Chromsome:  </span>
+        <span style="margin-right:5px;"> Chromosome:  </span>
         <select ng-model="chr" ng-change="updateChromosome()" class="selectpicker" data-width="auto">
           <option ng-repeat="chromosome in chromosomes" value="{{chromosome}}">
             {{chromosome}}
